User list header has been added

--- a/WebApplicationEducation/Views/Home/Index.cshtml
+++ b/WebApplicationEducation/Views/Home/Index.cshtml
@@ -8,6 +8,10 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+<hr />
+<h1>Список пользователей:</h1>
+<hr />
+
 <div>
     @foreach (var user in Model)
     {
